<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="register_title">Enrolment</string>
    <string name="identify_title">Identification</string>
    <string name="verify_title">Verification</string>
    <string name="refusal_label">Refusal Form</string>
    <string name="scanner_id_confirmation_message">Is %1$s your scanner?</string>
    <string name="scanner_confirmation_yes">Yes</string>
    <string name="scanner_confirmation_no">No</string>
    <string name="connect_scanner_bt_connect">Connecting to Vero…</string>
    <string name="connect_scanner_wake_un20">Waking up UN20…</string>
    <string name="connect_scanner_setup">Setting up Vero…</string>
    <string name="connect_scanner_finished">Connected</string>
    <string name="bluetooth_off_title">Bluetooth off</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="bluetooth_on">✓ Bluetooth on</string>
    <string name="bluetooth_off_toast_error">Could not turn on bluetooth. Please turn on bluetooth in device settings.</string>
    <string name="nfc_off_title">NFC off</string>
    <string name="turn_on_nfc">Turn on NFC</string>
    <string name="nfc_on">✓ NFC on</string>
    <string name="scanner_off_title">Scanner off</string>
    <string name="scanner_off_instructions">Press scanner power button.</string>
    <string name="scanner_on">✓ Scanner on</string>
    <string name="try_again_label">Try Again</string>
    <string name="not_my_scanner">%1$s is not my scanner</string>
    <string name="nfc_pair_title">Scanner not connected</string>
    <string name="nfc_pair_instructions">Tap back of scanner to back of phone</string>
    <string name="cannot_connect_devices">Cannot connect devices</string>
    <string name="nfc_pairing_in_progress">Found scanner %1$s</string>
    <string name="nfc_pairing_try_again_instruction">Please ensure scanner %1$s is turned on and try again.</string>
    <string name="nfc_pairing_rejected_instruction">Pairing cancelled, please try again and accept the pairing request when prompted.</string>
    <string name="nfc_pair_toast_try_again">Could not read NFC chip, please try again</string>
    <string name="nfc_pair_toast_invalid">Invalid NFC chip detected</string>
    <string name="serial_entry_ok">OK</string>
    <string name="serial_entry_pair_title">Scanner not connected</string>
    <string name="enter_scanner_number">Enter scanner number</string>
    <string name="enter_scanner_number_detail">This is found on the bottom of the scanner</string>
    <string name="serial_entry_pair_failed">Please ensure scanner %1$s is turned on and try again.</string>
    <string name="serial_entry_pair_rejected">Pairing cancelled, please try again and accept the pairing request when prompted.</string>
    <string name="serial_entry_pair_toast_invalid">Please enter the 6 digits of the serial number</string>
    <string name="sp" translatable="false">SP</string>
    <string name="ota_title">Scanner needs updating</string>
    <string name="ota_instructions">Keep scanner turned on as it is updating</string>
    <string name="updating">Updating…</string>
    <string name="updating_attempt">Updating attempt %1$s of %2$s…</string>
    <string name="update_complete">✓ Update complete</string>
    <string name="start_update">Start update</string>
    <string name="ota_recovery_title">Scanner update failed</string>
    <string name="ota_recovery_soft_reset">Turn scanner off and on again</string>
    <string name="ota_recovery_hard_reset">Press and hold power button for 5 seconds</string>
    <string name="ota_failed_title">Scanner update failed</string>
    <string name="ota_failed_instructions">Please contact your supervisor for help</string>
    <string name="continue_button">Continue</string>
    <string name="good_scan_direction">Swipe left to next finger</string>
    <string name="please_scan">Please scan</string>
    <string name="poor_scan_direction">Please re-scan</string>
    <string name="scanning">Scanning…</string>
    <string name="transfering_data">Transferring data…</string>
    <string name="good_scan_message">Good Scan</string>
    <string name="poor_scan_message">Poor Scan</string>
    <string name="no_finger_detected_message">No finger detected</string>
    <string name="finger_skipped_message">Finger skipped</string>
    <string name="no_fingers_scanned">Please scan at least 1 required finger</string>
    <string name="reconnecting_message">Reconnecting…</string>
    <string name="confirm_fingers_dialog_title">Fingers Scanned</string>
    <string name="capture_number_text">Scan %1$s of %2$s</string>
    <string name="please_scan_again">Please scan again</string>
    <string name="rescan_label">Re-scan</string>
    <string name="rescan_label_question">Re-scan?</string>
    <string name="scan_label">Scan</string>
    <string name="cancel_button" tools:ignore="ButtonCase">Cancel</string>
    <string name="please_wait_button">Please Wait</string>
    <string name="scan">Scan</string>
    <string name="confirm">Confirm</string>
    <string name="restart">Restart</string>
    <string name="l_5_finger_name">Left Fifth Finger</string>
    <string name="l_4_finger_name">Left Fourth Finger</string>
    <string name="l_3_finger_name">Left Third Finger</string>
    <string name="l_2_finger_name">Left Index Finger</string>
    <string name="l_1_finger_name">Left Thumb</string>
    <string name="r_1_finger_name">Right Thumb</string>
    <string name="r_2_finger_name">Right Index Finger</string>
    <string name="r_3_finger_name">Right Third Finger</string>
    <string name="r_4_finger_name">Right Fourth Finger</string>
    <string name="r_5_finger_name">Right Fifth Finger</string>
    <string name="please_wait">Please wait while we proceed to identification</string>
    <string name="loading_candidates">Loading candidates…</string>
    <plurals name="loaded_candidates_result">
        <item quantity="one">Loaded %d candidate.</item>
        <item quantity="other">Loaded %d candidates.</item>
    </plurals>
    <string name="matching_fingerprints">Matching fingerprints…</string>
    <string name="returning_results">Returning results…</string>
    <plurals name="returned_results">
        <item quantity="one">Returned %d result.</item>
        <item quantity="other">Returned %d results.</item>
    </plurals>
    <plurals name="tier1or2_matches">
        <item quantity="zero">No very good matches</item>
        <item quantity="one">%d very good match</item>
        <item quantity="other">%d very good matches</item>
    </plurals>
    <plurals name="tier3_matches">
        <item quantity="zero">No good matches</item>
        <item quantity="one">%d good match</item>
        <item quantity="other">%d good matches</item>
    </plurals>
    <plurals name="tier4_matches">
        <item quantity="zero">No matches</item>
        <item quantity="one">%d match</item>
        <item quantity="other">%d matches</item>
    </plurals>
    <string name="error_occurred_title">Error occurred</string>
    <string name="low_battery_title">Low battery</string>
    <string name="bluetooth_error_pair_scanner_and_device_title">Pair scanner and device</string>
    <string name="scanner_error_turn_scanner_on_title">Turn scanner on</string>
    <string name="no_permission_title">No permission</string>
    <string name="bluetooth_no_permission_message">Please enable the Bluetooth permission in the phone settings</string>
    <string name="bluetooth_not_supported_message">Bluetooth not supported on this device, please contact your system administrator</string>
    <string name="bluetooth_not_enabled_message">Bluetooth not enabled, please make sure it is enabled in settings and try again</string>
    <string name="multiple_scanners_found_message">More than one scanner is paired to the phone, please unpair un-needed scanners</string>
    <string name="low_battery_message">Scanner battery low, please charge your scanner</string>
    <string name="unforeseen_error_message">Please try again and if Simprints does not work contact your system administrator</string>
    <string name="bluetooth_error_pair_scanner_and_device_message">1. Check scanner is turned on \n 2. Tap Settings \n 3. Unpair any paired scanner \n 4. Pair your scanner to device \n 5. Tap back to return to Simprints</string>
    <string name="scanner_error_turn_scanner_on_message">1. Turn scanner on \n 2. Tap Try Again</string>
    <string name="close">CLOSE</string>
    <string name="settings_label">Phone settings</string>
    <string name="pair_scanner_label">Settings</string>
    <string name="why_did_you_skip_fingerprinting">Why did you skip fingerprinting?</string>
    <string name="button_submit">Submit</string>
    <string name="button_scan_prints">Scan Fingerprints</string>
    <string name="refusal_religious_concerns">Religious concerns</string>
    <string name="refusal_data_concerns">Does not want to give data</string>
    <string name="refusal_does_not_have_permission">Does not have permission</string>
    <string name="refusal_app_not_working">App not working</string>
    <string name="refusal_person_not_present">Person not present</string>
    <string name="refusal_too_young">Too young</string>
    <string name="refusal_other">Other</string>
    <string name="hint_other_reason">Additional Information</string>
    <string name="refusal_toast_select_option_submit">Please select an option and submit</string>
    <string name="refusal_toast_submit">Please submit form</string>
    <string name="empty" translatable="false" />
    <string name="get_ready">Get Ready</string>
    <string name="try_another_finger">Let\'s Try Another Finger!</string>
    <string name="missing_finger"><u>Missing Finger</u></string>
    <string name="biometrics_access_fingerprint">fingerprint information</string>
    <string name="biometrics_access_fingerprint_face">fingerprint information, photographs</string>
    <string name="biometrics_general_fingerprint">use your fingerprints</string>
    <string name="biometrics_parental_fingerprint">use your child\'s fingerprints</string>
    <string name="preference_select_fingers_title">Select default fingers</string>
    <string name="preference_summary_settings_fingers">View the fingers that will be scanned</string>
    <string name="finger_selection_confirm_dialog_text">Save settings?</string>
    <string name="finger_selection_confirm_dialog_yes">Save</string>
    <string name="finger_selection_confirm_dialog_no">Cancel</string>
    <string name="finger_selection_finger_label">Finger</string>
    <string name="finger_selection_quantity_label">Quantity</string>
    <string name="finger_selection_reset">Reset</string>
    <string name="finger_selection_add_finger">Add Finger</string>
    <string name="finger_selection_invalid">Invalid Selection - there is more than 5 of one finger</string>
    <string name="preference_view_fingers_title">View default fingers</string>
    <string name="finger_selection_fragment_title">View Fingers</string>
    <string name="title_fingerprint">Fingerprint</string>
    <string name="enrol_last_biometrics_alert_message_fingerprint_param">Fingerprint</string>
    <string name="fingerprint_feature_alert">fingerprint feature</string>
    <string name="finger_selection_activity_title">Select Fingers</string>
</resources>