<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fingerLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/fingerLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/finger_selection_finger_label"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/fingerHeaderDivider"
        app:layout_constraintEnd_toStartOf="@id/quantityLabelTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/quantityLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finger_selection_quantity_label"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/fingerHeaderDivider"
        app:layout_constraintStart_toEndOf="@id/fingerLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/fingerHeaderDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/simprints_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fingerLabelTextView"
        app:layout_constraintBottom_toTopOf="@id/fingerSelectionRecyclerView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fingerSelectionRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fingerHeaderDivider"
        app:layout_constraintBottom_toTopOf="@id/addFingerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/addFingerButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners_orange"
        android:fontFamily="@font/muli"
        android:textColor="@color/simprints_white"
        android:textSize="16sp"
        android:text="@string/finger_selection_add_finger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resetButton"
        app:layout_constraintTop_toBottomOf="@id/fingerSelectionRecyclerView"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/resetButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners_orange"
        android:fontFamily="@font/muli"
        android:textColor="@color/simprints_white"
        android:textSize="16sp"
        android:text="@string/finger_selection_reset"
        app:layout_constraintEnd_toStartOf="@id/addFingerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fingerSelectionRecyclerView"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
