<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simprints_blue"
    tools:context=".activities.connect.issues.serialentrypair.SerialEntryPairFragment">

    <Button
        android:id="@+id/serialEntryOkButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="108dp"
        android:layout_height="54dp"
        android:background="@drawable/button_rounded_corners_orange"
        android:fontFamily="@font/muli"
        android:padding="8sp"
        android:text="@string/ok"
        android:textColor="@color/simprints_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/serialEntryEditText"
        app:layout_constraintTop_toTopOf="@id/serialEntryPairMiddleGuideline" />

    <EditText
        android:id="@+id/serialEntryEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:textColor="@color/simprints_white"
        android:textSize="26sp"
        android:maxLength="6"
        app:layout_constraintBottom_toBottomOf="@id/serialEntryOkButton"
        app:layout_constraintEnd_toStartOf="@id/serialEntryOkButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/serialEntrySpTextView"
        app:layout_constraintTop_toTopOf="@id/serialEntryOkButton"
        tools:ignore="Autofill,LabelFor" />

    <ProgressBar
        android:id="@+id/serialEntryPairProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/simprints_white"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/serialEntryOkButton"
        app:layout_constraintBottom_toBottomOf="@id/serialEntryOkButton"
        app:layout_constraintStart_toStartOf="@id/serialEntryOkButton"
        app:layout_constraintEnd_toEndOf="@id/serialEntryOkButton" />

    <TextView
        android:id="@+id/serialEntryPairInstructionsTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/enter_scanner_number"
        android:textColor="@color/simprints_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/serialEntryPairInstructionsDetailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serialEntryPairTitleTextView"
        app:layout_constraintVertical_weight="0.3" />

    <TextView
        android:id="@+id/serialEntryPairTitleTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/serial_entry_pair_title"
        android:textColor="@color/simprints_white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/serialEntryPairInstructionsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.4" />

    <TextView
        android:id="@+id/serialEntryPairInstructionsDetailTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/enter_scanner_number_detail"
        android:textColor="@color/simprints_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/serialEntryPairMiddleGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serialEntryPairInstructionsTextView"
        app:layout_constraintVertical_weight="0.1" />

    <TextView
        android:id="@+id/serialEntrySpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sp"
        android:textColor="@color/simprints_white"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/serialEntryEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/serialEntryOkButton"
        app:layout_constraintBottom_toBottomOf="@id/serialEntryOkButton"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/serialEntryPairMiddleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>
