<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simprints_blue"
    tools:context=".activities.connect.issues.nfcpair.NfcPairFragment">

    <TextView
        android:id="@+id/couldNotPairTextView"
        style="@style/Text.Subtitle2.White"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/cannot_connect_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfcPairImageGuideline"
        app:layout_constraintVertical_bias="0.7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/try_again_label"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nfcPairEndGuideline"
        app:layout_constraintStart_toStartOf="@+id/nfcPairStartGuideline"
        app:layout_constraintTop_toBottomOf="@+id/nfcPairImageGuideline"
        app:layout_constraintVertical_bias="0.6"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/nfcPairInstructionsTextView"
        style="@style/Text.Subtitle1.White"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/nfc_pair_instructions"
        app:layout_constraintBottom_toTopOf="@id/tryAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nfcPairImageGuideline"
        app:layout_constraintVertical_weight="0.3" />

    <ImageView
        android:id="@+id/nfcPairScannerImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/nfc_pair_scanner"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/nfcPairImageGuideline"
        app:layout_constraintEnd_toStartOf="@+id/nfcPairScannerRightEdgeGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfcPairTitleTextView"
        app:layout_constraintVertical_weight="0.6"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/nfcPairPhoneImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/nfc_pair_phone"
        android:translationZ="5dp"
        app:layout_constraintBottom_toTopOf="@+id/nfcPairImageGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nfcPairDeviceLeftEdgeGuideline"
        app:layout_constraintTop_toBottomOf="@+id/nfcPairTitleTextView"
        app:layout_constraintVertical_weight="0.6"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/nfcPairTitleTextView"
        style="@style/Text.Headline5.White.Bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/nfc_pair_title"
        app:layout_constraintBottom_toTopOf="@id/nfcPairPhoneImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.28" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/nfcPairingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tryAgainButton"
        app:layout_constraintEnd_toEndOf="@id/tryAgainButton"
        app:layout_constraintStart_toStartOf="@id/tryAgainButton"
        app:layout_constraintTop_toTopOf="@id/tryAgainButton"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nfcPairScannerRightEdgeGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nfcPairDeviceLeftEdgeGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nfcPairEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nfcPairImageGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nfcPairStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

</androidx.constraintlayout.widget.ConstraintLayout>
